exports[`DisplayTable should render column actions 1`] = `
<table
  className="table tc-list-display-table">
  <thead>
    <tr>
      <th>
        Id
      </th>
      <th>
        Name
      </th>
      <th>
        
      </th>
      <th>
        Author
      </th>
      <th>
        Created
      </th>
      <th>
        Modified
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className=""
      id={undefined}>
      <td>
        1
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id={undefined}>
            Hello world
          </span>
        </div>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-edit"
              title={null} />
          </button>
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-trash-o"
              title={null} />
          </button>
        </div>
      </td>
      <td>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="favorite btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <svg
              aria-hidden="true"
              className="tc-svg-icon"
              title={null}>
              <use
                xlinkHref="#talend-star" />
            </svg>
          </button>
          <button
            aria-describedby={42}
            className="certify btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <svg
              aria-hidden="true"
              className="tc-svg-icon"
              title={null}>
              <use
                xlinkHref="#talend-badge" />
            </svg>
          </button>
        </div>
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className=""
      id={undefined}>
      <td>
        2
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id={undefined}>
            Foo
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td />
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className=""
      id={undefined}>
      <td>
        2
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id={undefined}>
            Bar
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td />
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DisplayTable should render selected list element with custom selectedClass if set 1`] = `
<table
  className="table tc-list-display-table">
  <thead>
    <tr>
      <th>
        Id
      </th>
      <th>
        Name
      </th>
      <th>
        Author
      </th>
      <th>
        Created
      </th>
      <th>
        Modified
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="something"
      id="table-list-0">
      <td>
        1
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id="table-list-0-title">
            Hello world
          </span>
        </div>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-edit"
              title={null} />
          </button>
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-trash-o"
              title={null} />
          </button>
        </div>
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className="something"
      id="table-list-1">
      <td>
        2
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id="table-list-1-title">
            Foo
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className="something"
      id="table-list-2">
      <td>
        2
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id="table-list-2-title">
            Bar
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DisplayTable should render selected list element with defaut 'active' class 1`] = `
<table
  className="table tc-list-display-table">
  <thead>
    <tr>
      <th>
        Id
      </th>
      <th>
        Name
      </th>
      <th>
        Author
      </th>
      <th>
        Created
      </th>
      <th>
        Modified
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="active"
      id="table-list-0">
      <td>
        1
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id="table-list-0-title">
            Hello world
          </span>
        </div>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-edit"
              title={null} />
          </button>
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-trash-o"
              title={null} />
          </button>
        </div>
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className="active"
      id="table-list-1">
      <td>
        2
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id="table-list-1-title">
            Foo
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className="active"
      id="table-list-2">
      <td>
        2
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id="table-list-2-title">
            Bar
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DisplayTable should render sortable headers 1`] = `
<table
  className="table tc-list-display-table">
  <thead>
    <tr>
      <th>
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          role="link"
          type="button">
          <span>
            Id
          </span>
        </button>
      </th>
      <th>
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          role="link"
          type="button">
          <span>
            Name
          </span>
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-caret-down" />
          </svg>
        </button>
      </th>
      <th>
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          role="link"
          type="button">
          <span>
            
          </span>
        </button>
      </th>
      <th>
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          role="link"
          type="button">
          <span>
            Author
          </span>
        </button>
      </th>
      <th>
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          role="link"
          type="button">
          <span>
            Created
          </span>
        </button>
      </th>
      <th>
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          role="link"
          type="button">
          <span>
            Modified
          </span>
        </button>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className=""
      id={undefined}>
      <td>
        1
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id={undefined}>
            Hello world
          </span>
        </div>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-edit"
              title={null} />
          </button>
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-trash-o"
              title={null} />
          </button>
        </div>
      </td>
      <td>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="favorite btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <svg
              aria-hidden="true"
              className="tc-svg-icon"
              title={null}>
              <use
                xlinkHref="#talend-star" />
            </svg>
          </button>
          <button
            aria-describedby={42}
            className="certify btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <svg
              aria-hidden="true"
              className="tc-svg-icon"
              title={null}>
              <use
                xlinkHref="#talend-badge" />
            </svg>
          </button>
        </div>
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className=""
      id={undefined}>
      <td>
        2
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id={undefined}>
            Foo
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td />
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className=""
      id={undefined}>
      <td>
        2
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id={undefined}>
            Bar
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td />
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DisplayTable should render with default title property (name) 1`] = `
<table
  className="table tc-list-display-table">
  <thead>
    <tr>
      <th>
        Id
      </th>
      <th>
        Name
      </th>
      <th>
        Author
      </th>
      <th>
        Created
      </th>
      <th>
        Modified
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className=""
      id={undefined}>
      <td>
        1
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id={undefined}>
            Hello world
          </span>
        </div>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-edit"
              title={null} />
          </button>
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-trash-o"
              title={null} />
          </button>
        </div>
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className=""
      id={undefined}>
      <td>
        2
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id={undefined}>
            Foo
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className=""
      id={undefined}>
      <td>
        2
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id={undefined}>
            Bar
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DisplayTable should render with defined title property 1`] = `
<table
  className="table tc-list-display-table">
  <thead>
    <tr>
      <th>
        Id
      </th>
      <th>
        Name
      </th>
      <th>
        Author
      </th>
      <th>
        Created
      </th>
      <th>
        Modified
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className=""
      id={undefined}>
      <td>
        <div
          className={undefined}>
          <i
            aria-hidden="true"
            className="fa fa-file-excel-o tc-list-icon"
            title={null} />
          <button
            className="btn btn-link"
            disabled={false}
            id={undefined}
            onClick={[Function]}
            role="link"
            type="button">
            1
          </button>
        </div>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-edit"
              title={null} />
          </button>
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-trash-o"
              title={null} />
          </button>
        </div>
      </td>
      <td>
        Hello world
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className=""
      id={undefined}>
      <td>
        <div
          className={undefined}>
          <i
            aria-hidden="true"
            className="fa fa-file-pdf-o tc-list-icon"
            title={null} />
          <button
            className="btn btn-link"
            disabled={false}
            id={undefined}
            onClick={[Function]}
            role="link"
            type="button">
            2
          </button>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Foo
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className=""
      id={undefined}>
      <td>
        <div
          className={undefined}>
          <button
            className="btn btn-link"
            disabled={false}
            id={undefined}
            onClick={[Function]}
            role="link"
            type="button">
            2
          </button>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Bar
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DisplayTable should render with id if provided 1`] = `
<table
  className="table tc-list-display-table">
  <thead>
    <tr>
      <th>
        Id
      </th>
      <th>
        Name
      </th>
      <th>
        Author
      </th>
      <th>
        Created
      </th>
      <th>
        Modified
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className=""
      id="table-list-0">
      <td>
        1
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id="table-list-0-title">
            Hello world
          </span>
        </div>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-edit"
              title={null} />
          </button>
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-trash-o"
              title={null} />
          </button>
        </div>
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className=""
      id="table-list-1">
      <td>
        2
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id="table-list-1-title">
            Foo
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className=""
      id="table-list-2">
      <td>
        2
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id="table-list-2-title">
            Bar
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DisplayTable should render with item custom className if provided 1`] = `
<table
  className="table tc-list-display-table">
  <thead>
    <tr>
      <th>
        Id
      </th>
      <th>
        Name
      </th>
      <th>
        Author
      </th>
      <th>
        Created
      </th>
      <th>
        Modified
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="item-0-class"
      id="table-list-0">
      <td>
        1
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id="table-list-0-title">
            Hello world
          </span>
        </div>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-edit"
              title={null} />
          </button>
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-trash-o"
              title={null} />
          </button>
        </div>
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className="item-1-class"
      id="table-list-1">
      <td>
        2
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id="table-list-1-title">
            Foo
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
    <tr
      className=""
      id="table-list-2">
      <td>
        2
      </td>
      <td>
        <div
          className={undefined}>
          <span
            className={undefined}
            id="table-list-2-title">
            Bar
          </span>
        </div>
        <div
          className="tc-actions btn-group" />
      </td>
      <td>
        Jean-Pierre DUPONT
      </td>
      <td>
        2016-09-22
      </td>
      <td>
        2016-09-22
      </td>
    </tr>
  </tbody>
</table>
`;
